# opencv_image_rotation

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile
src/: main.cpp  main_v2.cpp
